--- a/index.html
+++ b/index.html
@@ -18,17 +18,21 @@
         <h2>Primeiros passos com programação Web</h2>
         <br>
         <h3>100% gratuito e online</h3>
-        <form action="">
-            <input type="text" placeholder="Nome" class="input">
+        <form action="https://gmail.us5.list-manage.com/subscribe/post?u=16ef9f61518c07a1b46a2c2a1&amp;id=a036a82e84" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <input type="text" placeholder="Nome" class="input" name="FNAME" >
             <br>
-            <input type="email" name="email" id="email" placeholder="E-Mail" class="input">
+            <input type="email" id="email" placeholder="E-Mail" class="input"  name="EMAIL">
             <br>
             <div class="sim">
                 <input type="checkbox" name="sim" id="sim">
                 <label for="sim">Sim, Desejo me inscrever no Workshop e receber e-mails sobre tecnologia, programação e ofertas.</label>
             </div>
+             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_16ef9f61518c07a1b46a2c2a1_a036a82e84" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Quero me escrever!" name="subscribe" id="mc-embedded-subscribe"  class="butao"></div>
+    </div>
             <br>
-            <button class="butao">Quero receber o acesso!</button>
+            
         </form>
     </div>
 </body>
